set and unset for app env vars
