# api/handlers/app.go
@@ -8,6 +8,7 @@ import (
 	"github.com/luizalabs/paas/api/models"
 	"github.com/luizalabs/paas/api/models/storage"
 	"github.com/luizalabs/paas/api/restapi/operations/apps"
+	"k8s.io/kubernetes/pkg/api"
 )
 
 // CreateAppHandler create apps
@@ -65,4 +66,140 @@ func GetAppDetailsHandler(params apps.GetAppDetailsParams, principal interface{}
 	r := apps.NewGetAppDetailsOK()
 	r.SetPayload(&m)
 	return r
+}
+
+// PartialUpdateAppHandler partial updating app... only envvars for now
+func PartialUpdateAppHandler(params apps.PartialUpdateAppParams, principal interface{}) middleware.Responder {
+	log.Printf("executing partial update for app [%d] envvars\n", params.AppID)
+	// TODO: find a better place to put this centralized
+	slugRunnerEnvVars := []string{"SLUG_URL", "PORT", "DEIS_DEBUG", "BUILDER_STORAGE"}
+
+	// get info about the app
+	appID := uint(params.AppID)
+	sApp := storage.Application{}
+	sApp.ID = appID
+	if storage.DB.Where(&storage.Application{TeamID: uint(params.TeamID)}).Preload("Team").Preload("EnvVars").First(&sApp).RecordNotFound() {
+		log.Printf("app [%d] not found in db.\n", appID)
+		return apps.NewPartialUpdateAppDefault(500)
+	}
+
+	sEnvVars := &sApp.EnvVars
+
+	// start transaction
+	t := storage.DB.Begin()
+	var te error
+	// checking operations
+	for _, op := range params.Body {
+		createUpdateEnvVars := func() error {
+			for _, opv := range op.Value {
+				kf := false // key found controll
+				for _, e := range *sEnvVars {
+					if *opv.Key == e.Key { // envvar already exists... update
+						kf = true
+						if err := t.Model(&e).UpdateColumns(storage.EnvVar{Value: opv.Value}).Error; err != nil {
+							return err
+						}
+						break
+					}
+				}
+				if kf == false {
+					newEnv := storage.EnvVar{ // envvar not found... create
+						AppID: appID,
+						Key:   *opv.Key,
+						Value: opv.Value,
+					}
+					if err := t.Create(&newEnv).Error; err != nil {
+						return err
+					}
+				}
+			}
+			return nil
+		}
+		deleteEnvVars := func() error {
+			for _, o := range op.Value {
+				for _, e := range *sEnvVars {
+					if *o.Key == e.Key {
+						if err := t.Delete(&e).Error; err != nil {
+							return err
+						}
+						break
+					}
+				}
+			}
+			return nil
+		}
+		// checking for invalid keys to be changed manually
+		for i, opv := range op.Value {
+			for _, k := range slugRunnerEnvVars {
+				if *opv.Key == k {
+					log.Printf(`invalid key "%s" to be changed manually... discarding this before do something\n`, k)
+					op.Value = append(op.Value[:i], op.Value[i+1:]...)
+					break
+				}
+			}
+		}
+		if *op.Op == "add" {
+			te = createUpdateEnvVars()
+		} else if *op.Op == "remove" {
+			te = deleteEnvVars()
+		}
+		if te != nil {
+			break
+		}
+	}
+	// check for errors
+	if te != nil {
+		t.Rollback()
+		log.Printf("error doing a partial update to app envvars. %s\n", te)
+		return apps.NewPartialUpdateAppDefault(500)
+	}
+	// commit transaction
+	if err := t.Commit().Error; err != nil {
+		log.Printf("error doing a partial update to app envvars. %s\n", err)
+		return apps.NewPartialUpdateAppDefault(500)
+	}
+
+	// check if the k8s deploy exists and update his envvars
+	dp := newDeployParams(&sApp)
+
+	// get k8s deploy
+	d, err := getDeploy(dp)
+	if err != nil {
+		log.Printf("error when trying to collect info about the k8s_deploy. %s\n", err)
+		return apps.NewPartialUpdateAppDefault(500)
+	}
+	if d != nil { // deploy exists
+		// get and update envvars
+		sEnvVars := []storage.EnvVar{}
+		if r := storage.DB.Where(&storage.EnvVar{AppID: appID}).Find(&sEnvVars); r.Error != nil && r.RecordNotFound() == false {
+			log.Printf("error getting env_vars for the app [%d] from db to update deployment. %s\n", params.AppID, r.Error)
+			return apps.NewPartialUpdateAppDefault(500)
+		}
+		// extract slugrunner env vars from deployment
+		newEnvVars := []api.EnvVar{}
+		for _, se := range slugRunnerEnvVars {
+			for _, e := range d.Spec.Template.Spec.Containers[0].Env {
+				if e.Name == se {
+					newEnvVars = append(newEnvVars, e)
+					break
+				}
+			}
+		}
+		// insert app env vars
+		for _, ne := range sEnvVars {
+			e := api.EnvVar{
+				Name:  ne.Key,
+				Value: ne.Value,
+			}
+			newEnvVars = append(newEnvVars, e)
+		}
+		d.Spec.Template.Spec.Containers[0].Env = newEnvVars
+		// update k8s deploy
+		if _, err := updateDeploy(d, "update on envvars"); err != nil {
+			log.Printf("error when updating the k8s deploy [%s/%s]. %s\n", d.GetNamespace(), d.GetName(), err)
+			return apps.NewPartialUpdateAppDefault(500)
+		}
+	}
+
+	return apps.NewPartialUpdateAppOK()
 }
