# api/restapi/operations/apps/partial_update_app.go
@@ -1,0 +1,65 @@
+package apps
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+)
+
+// PartialUpdateAppHandlerFunc turns a function with the right signature into a partial update app handler
+type PartialUpdateAppHandlerFunc func(PartialUpdateAppParams, interface{}) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn PartialUpdateAppHandlerFunc) Handle(params PartialUpdateAppParams, principal interface{}) middleware.Responder {
+	return fn(params, principal)
+}
+
+// PartialUpdateAppHandler interface for that can handle valid partial update app params
+type PartialUpdateAppHandler interface {
+	Handle(PartialUpdateAppParams, interface{}) middleware.Responder
+}
+
+// NewPartialUpdateApp creates a new http.Handler for the partial update app operation
+func NewPartialUpdateApp(ctx *middleware.Context, handler PartialUpdateAppHandler) *PartialUpdateApp {
+	return &PartialUpdateApp{Context: ctx, Handler: handler}
+}
+
+/*PartialUpdateApp swagger:route PATCH /teams/{team_id}/apps/{app_id} apps partialUpdateApp
+
+Partial update app
+
+Update some app properties, for now, only accept envvars
+
+*/
+type PartialUpdateApp struct {
+	Context *middleware.Context
+	Handler PartialUpdateAppHandler
+}
+
+func (o *PartialUpdateApp) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, _ := o.Context.RouteInfo(r)
+	var Params = NewPartialUpdateAppParams()
+
+	uprinc, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	var principal interface{}
+	if uprinc != nil {
+		principal = uprinc
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
